--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,13 @@
 node_modules
 .env
+coverage
+coverage.json
+typechain
+typechain-types
+
+# Hardhat files
+cache
+artifacts
+
+metamask.js
+Certify.js
