--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "ethers": "^6.13.4",
     "hardhat": "^2.22.17"
+  },
+  "dependencies": {
+    "cors": "^2.8.5"
   }
 }
